crates/dlin-core/src/graph/snapshots/dlin_core__graph__filter__tests__collapse_snapshot_bfs_pseudoendpoint.snap
---
source: src/graph/filter.rs
expression: render_mermaid(&collapsed)
---
flowchart LR
    source_raw_x(["raw_x"])


    classDef source fill:#27AE60,stroke:#333,color:#fff
    class source_raw_x source
