crates/dlin-core/src/graph/snapshots/dlin_core__graph__filter__tests__snapshot_transitive_select_with_node_type.snap
---
source: src/graph/filter.rs
expression: render_mermaid(&filtered)
---
flowchart LR
    model_final["final"]
    model_intermediate["intermediate"]
    source_raw_a(["a"])

    model_intermediate -->|"ref (via 1)"| model_final
    source_raw_a -.->|"source (via 1)"| model_intermediate

    classDef model fill:#4A90D9,stroke:#333,color:#fff
    classDef source fill:#27AE60,stroke:#333,color:#fff
    class model_final model
    class model_intermediate model
    class source_raw_a source
